--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -31,3 +31,12 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+snapcrafts:
+  -
+    id: tanda
+    name: tanda
+    # publish: true
+    summary: Versioning your flutter project follow standard semantic version.
+    # description: `tanda` is a command line tool that will help you versioning your flutter project.
+    channel_templates:
+      - stable
