--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -35,7 +35,7 @@ snapcrafts:
   -
     id: tanda
     name: tanda
-    # publish: true
+    publish: true
     summary: Versioning your flutter project follow standard semantic version.
     # description: `tanda` is a command line tool that will help you versioning your flutter project.
     channel_templates:
