Add github detail to auto=publish

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -43,3 +43,10 @@ snapcrafts:
     confinement: classic
     channel_templates:
       - stable
+
+release:
+  github:
+    owner: fakhrullah
+    name: tanda
+
+  # draft: true
